2008-05-08  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs, XmlSyntaxMode.xml:
	  Fixed a syntax highlighting bug/worked on xml highlighting.

2008-05-08  Mike Krüger <mkrueger@novell.com> 

	* XmlSyntaxMode.xml: worked on xml highlighting.

2008-05-08  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextEditor.cs:
	  fixed "Bug 387778 - MD Crash on Mouse Paste".

2008-05-07  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/BookmarkMargin.cs: fixed null ref exception.

2008-05-07  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/BookmarkMargin.cs: Bookmark margin now exposes it's
	  draw event.

2008-05-07  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextMarker.cs,
	  Mono.TextEditor/BookmarkMargin.cs: Worked on text markers.

2008-05-07  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/ISearchEngine.cs:
	  implemented replace regex groups.

2008-05-07  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed Bug 387321 - Crash when Select
	  All + Copy + Select All + Paste.

2008-05-06  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Reset the IMContext even when there's
	  an exception during a commit.
	* AspNetSyntaxMode.xml, XmlSyntaxMode.xml: Improve highlighting
	  schemes.
	* Mono.TextEditor.Highlighting/Style.cs: Allow highlighting schemes to
	  access the "default" colour.

2008-05-06  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextMarker.cs:
	  Worked on text markers.

2008-05-06  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/ISearchEngine.cs:
	  Worked on regex search.

2008-05-05  Mike Krüger <mkrueger@novell.com> 
